Platform 2.17

* Audit Logging

  - The default value for "audit.log.path" has changed to "var/log/audit.log".
    To disable audit logging, use the new config option "audit.log.enable".

Platform 2.16

* Library Upgrades

  - Jackson to 2.10.0 (was 2.9.10) (fixes deserialization vulnerabilities
    when using @JsonTypeInfo or "default typing")

Platform 2.14

* Reporting

  We added a "reporting.pulse.include-host-tag" config option (default "true")
  which can be set to "false" in order to omit the "host" tag from metrics
  reported to Pulse.

* Library Upgrades

  - Jetty to 9.4.21 (was 9.4.20) (various HTTP/2 denial-of-service fixes)

Platform 2.13

* Library Upgrades

  - Jackson to 2.9.10 (was 2.9.9) (fixes deserialization vulnerabilities
    when using @JsonTypeInfo or "default typing")

Platform 2.12

* HttpClient and HttpServer

  We disabled TLS 1.1 and the ciphers TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA,
  TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA, TLS_RSA_WITH_AES_256_CBC_SHA, and
  TLS_RSA_WITH_AES_128_CBC_SHA.

* JMX

  - We fixed a bug preventing JMX from starting on Java 11.
  - We log a hint about necessary JVM config when JMX fails to start on Java 11
  - We skip starting the JMX agent on Java 11 if it is already configured.

* Library Upgrades

  - Guava to 28.1-jre (was 28.0-jre)

Platform 2.11

* Logging

  We added a "log.queue-size" configuration option. If nonzero, the main
  launcher.log will use asynchronous logging with an in-memory queue
  of the configured maximum size. The default is "0".

* Library Upgrades

  - Jetty to 9.4.20 (was 9.4.18)

Platform 2.10

* Library Upgrades

  - jackson-databind to 2.9.9.3 (was 2.9.9.2) (fix regression in Platform 2.09)

Platform 2.09

* Launcher

  Arguments in jvm.properties that start with "-XX:+Unlock" now get moved
  earlier than other arguments in jvm.properties.

* Library Upgrades

  - jackson-databind to 2.9.9.2 (was 2.9.9.1) (CVE-2019-14379 CVE-2019-14439)

Platform 2.08

* Library Upgrades
